# epidemic-api

./: .env.example  .gitignore  api.py  main.py  pyproject.toml  settings.py  tg_auth.py
app/api/: routes.py
app/api/endpoints/: user.py
app/auth/: auth_bearer.py  tg_auth.py
app/core/: config.py
app/model/: user.py
